--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -215,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ev-energy-optimization-k_wesG8s-py3.12",
    "language": "python",
    "name": "python3"
   },
