--- a/notebook/testing_data.ipynb
+++ b/notebook/testing_data.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "#Place choice and route method\n",
     "place     = \"Padua, Italy\"\n",
-    "mode      = \"walk\"           #'drive', 'bike', 'walk'\n",
+    "mode      = \"drive\"           #'drive', 'bike', 'walk'\n",
     "\n",
     "#Import geographical information as a graph\n",
     "graph = ox.graph_from_place(place, network_type = mode)"
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3294/2807957983.py:5: FutureWarning: The `geometries` module and `geometries_from_X` functions have been renamed the `features` module and `features_from_X` functions. Use these instead. The `geometries` module and function names are deprecated and will be removed in the v2.0.0 release. See the OSMnx v2 migration guide: https://github.com/gboeing/osmnx/issues/1123\n",
+      "/tmp/ipykernel_14095/2807957983.py:5: FutureWarning: The `geometries` module and `geometries_from_X` functions have been renamed the `features` module and `features_from_X` functions. Use these instead. The `geometries` module and function names are deprecated and will be removed in the v2.0.0 release. See the OSMnx v2 migration guide: https://github.com/gboeing/osmnx/issues/1123\n",
       "  cafe = ox.geometries_from_place(place, tags=tags)\n"
      ]
     },
@@ -271,11 +271,11 @@
      "text": [
       "/home/codespace/.cache/pypoetry/virtualenvs/ev-energy-optimization-k_wesG8s-py3.12/lib/python3.12/site-packages/osmnx/graph.py:392: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  polygon = gdf_place[\"geometry\"].unary_union\n",
-      "/tmp/ipykernel_3294/1229118406.py:20: FutureWarning: The `folium` module has been deprecated and will be removed in the v2.0.0 release. You can generate and explore interactive web maps of graph nodes, edges, and/or routes automatically using GeoPandas.GeoDataFrame.explore instead, for example like: `ox.graph_to_gdfs(G, nodes=False).explore()`. See the OSMnx examples gallery for complete details and demonstrations.\n",
+      "/tmp/ipykernel_14095/1229118406.py:20: FutureWarning: The `folium` module has been deprecated and will be removed in the v2.0.0 release. You can generate and explore interactive web maps of graph nodes, edges, and/or routes automatically using GeoPandas.GeoDataFrame.explore instead, for example like: `ox.graph_to_gdfs(G, nodes=False).explore()`. See the OSMnx examples gallery for complete details and demonstrations.\n",
       "  folium_graph = ox.plot_graph_folium(graph, graph_map=m, popup_attribute=\"highway\", edge_color=\"blue\", edge_width=2)\n",
       "/home/codespace/.cache/pypoetry/virtualenvs/ev-energy-optimization-k_wesG8s-py3.12/lib/python3.12/site-packages/osmnx/folium.py:162: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  x, y = gdf.unary_union.centroid.xy\n",
-      "/tmp/ipykernel_3294/1229118406.py:26: FutureWarning: The `geometries` module and `geometries_from_X` functions have been renamed the `features` module and `features_from_X` functions. Use these instead. The `geometries` module and function names are deprecated and will be removed in the v2.0.0 release. See the OSMnx v2 migration guide: https://github.com/gboeing/osmnx/issues/1123\n",
+      "/tmp/ipykernel_14095/1229118406.py:26: FutureWarning: The `geometries` module and `geometries_from_X` functions have been renamed the `features` module and `features_from_X` functions. Use these instead. The `geometries` module and function names are deprecated and will be removed in the v2.0.0 release. See the OSMnx v2 migration guide: https://github.com/gboeing/osmnx/issues/1123\n",
       "  cafe = ox.geometries_from_place(place, tags=tags)\n",
       "/home/codespace/.cache/pypoetry/virtualenvs/ev-energy-optimization-k_wesG8s-py3.12/lib/python3.12/site-packages/osmnx/features.py:294: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  polygon = gdf_place[\"geometry\"].unary_union\n"
